# dotfiles.next

./: .gitignore  .stow-local-ignore  Dockerfile.archlinux  Makefile  README.md  compose.yml  dotfiles.yml  install  main.py  project.json  pyproject.toml
cli/go/: __init__.py  __install__.py  __uninstall__.py  __update__.py  go.mod
cli/odin/: __init__.py  __install__.py  __uninstall__.py  __update__.py
cli/python/: .env.local  __init__.py  __install__.py  __uninstall__.py  __update__.py  main.py  pyproject.toml
cli/python/cmds/: __init__.py  cli.py
cli/typescript/: __init__.py  __install__.py  __uninstall__.py  __update__.py
cli/zig/: __init__.py  __install__.py  __uninstall__.py  __update__.py
os/shared/p10k/: .p10k.zsh
pkg/: 03_powerlevel10k.py  06_nodejs.py
src/: conf.py  env.py
src/cfg/: BuildJson.py  Context.py  ProjectJson.py  __init__.py
src/cli/: Cli.py  Context.py  MODE.py  __init__.py  cli.py  command.py  create_decorator.py  install.py  installer.py  pass_context.py  uninstall.py  update.py
src/ctx/: Conf.py  Environment.py
src/env/: env.py
src/errors/: FileNotFound.py  ModuleNotFound.py  __init__.py
src/installer/: __init__.py  create_backup.py  create_build.py  create_links.py  install_packages.py  setup.py
src/os/: Build.py  Package.py  __init__.py  installed.py  is_installed.py
src/pkg/: 01_omz.py  nvm.py  omz.py
src/pm/: File.py  Homebrew.py  Package.py  PackageManager.py  Pacman.py  Source.py  __init__.py  instance.py
src/sys/: InstallLogger.py  __init__.py
src/util/: quote.py
tools/python/: pyproject.toml
(+80 files in other folders)
